аннотации: @Entity, @Table(name = leads) Lombok: @Data, @NoArgsConstructor, @AllArgsConstructor поле id: @Id + @GeneratedValue(strategy = GenerationType.UUID) поле email: @Column(nullable = false, unique = true) остальные поля: @Column по необходимости НЕ пишите ручные getter/setter — Lombok генерирует их автоматически